--- a/MAPMATE.html
+++ b/MAPMATE.html
@@ -60,6 +60,7 @@
       <!--Form group containing the autocomplete input and submit button -->
 
         <!--Input field for entering the location -->
+      <div class="form-group" >
         <input type="text" class="form-control" id="autocomplete" placeholder="Enter Location">
         <button id="submit-button" onclick="searchNearbyPlaces()">Submit</button>
       </div>
